# telegram-pymorphy-bot

./: .dockerignore  Dockerfile  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt  tags.py
telegram_pymorphy_bot/: __main__.py  grammems.json
