[tool.poetry]
name = "telegram-pymorphy-bot"
version = "0.1.0"
description = "Linguistics morphological analysis for russian words in Telegram"
authors = ["Mark <github.com/super16>"]
license = "MIT"
readme = "README.md"
packages = [{include = "telegram_pymorphy_bot"}]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.4"
pymorphy3 = "^2.0.2"
nltk = "^3.9.1"


[tool.poetry.group.development.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
